welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:34: error: not enough arguments for method faireCote: (c: java.awt.Color)Unit.
Unspecified value parameter c.
    faireCote();
             ^